Bugzilla 47962 - Fixed some potential NPEs. Avoided unnecessary creation of box instances.  Applied patch with mods
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@823348 13f79535-47bb-0310-9956-ffa450edef68