@@ -6,7 +6,7 @@
    (the "License"); you may not use this file except in compliance with
    the License.  You may obtain a copy of the License at
 
-       http://www.apache.org/licenses/LICENSE-2.0
+	   http://www.apache.org/licenses/LICENSE-2.0
 
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
@@ -23,24 +23,24 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Utility class to help test code verify that generated files do not differ from proof copies in 
+ * Utility class to help test code verify that generated files do not differ from proof copies in
  * any significant detail.  Normally this task would be simple except for the presence of artifacts
- * in the file that change every time it is generated.  Usually these volatile artifacts are  
+ * in the file that change every time it is generated.  Usually these volatile artifacts are
  * time-stamps, user names, or other machine dependent parameters.
- *  
+ *
  * @author Josh Micich
  */
 public final class StreamUtility {
 
 	/**
 	 * Compares two streams with expected differences in specified regions.  The streams are
-     * expected to be of equal length and comparison is always byte for byte.  That is -
-     * differences can only involve exchanging each individual byte for another single byte.<br>
-     * Both input streams are closed.
-     *  
-	 * @param allowableDifferenceRegions array of integer pairs: (offset, length). 
+	 * expected to be of equal length and comparison is always byte for byte.  That is -
+	 * differences can only involve exchanging each individual byte for another single byte.<br>
+	 * Both input streams are closed.
+	 *
+	 * @param allowableDifferenceRegions array of integer pairs: (offset, length).
 	 * Any differences encountered in these regions of the streams will be ignored
-	 * @return <code>null</code> if streams are identical, else the 
+	 * @return <code>null</code> if streams are identical, else the
 	 * byte indexes of differing data.  If streams were different lengths,
 	 * the returned indexes will be -1 and the length of the shorter stream
 	 */
@@ -51,36 +51,36 @@ public final class StreamUtility {
 		}
 		boolean success = false;
 		int[] result;
-        try {
-            result = diffInternal(isA, isB, allowableDifferenceRegions);
-            success = true;
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        } finally {
-            close(isA, success);
-            close(isB, success);
-        }
-        return result;
+		try {
+			result = diffInternal(isA, isB, allowableDifferenceRegions);
+			success = true;
+		} catch (IOException e) {
+			throw new RuntimeException(e);
+		} finally {
+			close(isA, success);
+			close(isB, success);
+		}
+		return result;
 	}
 
 	/**
 	 * @param success <code>false</code> if the outer method is throwing an exception.
 	 */
-    private static void close(InputStream is, boolean success) {
-        try {
-            is.close();
-        } catch (IOException e) {
-            if(success) {
-                // this is a new error. ok to throw
-                throw new RuntimeException(e);
-            }
-            // else don't subvert original exception. just print stack trace for this one
-            e.printStackTrace();
-        }
-    }
+	private static void close(InputStream is, boolean success) {
+		try {
+			is.close();
+		} catch (IOException e) {
+			if(success) {
+				// this is a new error. ok to throw
+				throw new RuntimeException(e);
+			}
+			// else don't subvert original exception. just print stack trace for this one
+			e.printStackTrace();
+		}
+	}
 
-    private static int[] diffInternal(InputStream isA, InputStream isB, int[] allowableDifferenceRegions)
-            throws IOException {
+	private static int[] diffInternal(InputStream isA, InputStream isB, int[] allowableDifferenceRegions)
+			throws IOException {
 		int offset = 0;
 		List temp = new ArrayList();
 		while (true) {
@@ -97,11 +97,11 @@ public final class StreamUtility {
 				return new int[] { -1, offset, };
 			}
 			if (b != b2 && !isIgnoredRegion(allowableDifferenceRegions, offset)) {
-				temp.add(new Integer(offset));
+				temp.add(Integer.valueOf(offset));
 			}
 			offset++;
 		}
-    }
+	}
 
 	private static boolean isIgnoredRegion(int[] allowableDifferenceRegions, int offset) {
 		for (int i = 0; i < allowableDifferenceRegions.length; i+=2) {
@@ -121,7 +121,7 @@ public final class StreamUtility {
 		}
 		Integer[] boxInts = new Integer[nItems];
 		temp.toArray(boxInts);
-		
+
 		int[] result = new int[nItems];
 		for (int i = 0; i < result.length; i++) {
 			result[i] = boxInts[i].intValue();
